feature : add passed unit api and unit test
